@@ -102,6 +102,7 @@
 	define('AUDIT_RESOURCE_SCENARIO',	22);
 	define('AUDIT_RESOURCE_DISCOVERY_RULE',	23);
 	define('AUDIT_RESOURCE_SLIDESHOW',	24);
+	define('AUDIT_RESOURCE_SCRIPT',		25);
 
 	define('CONDITION_TYPE_HOST_GROUP',	0);
 	define('CONDITION_TYPE_HOST',		1);
@@ -326,6 +327,9 @@
 	define('PERM_READ_ONLY',	2);
 	define('PERM_READ_LIST',	1);
 	define('PERM_DENY',		0);
+	
+	define('SCRIPT_HOST_ACCESS_READ', 0);
+	define('SCRIPT_HOST_ACCESS_WRITE', 1);
 
 	define('PERM_RES_STRING_LINE',	0); /* return string of nodes id - '1,2,3,4,5' */
 	define('PERM_RES_IDS_ARRAY',	1); /* return array of nodes id - array(1,2,3,4) */
